[gd_scene load_steps=6 format=3 uid="uid://b3nqdbkj1k7in"]

[ext_resource type="Script" uid="uid://ure2ojkdo4sf" path="res://interface/main_menu/character_selection/character_moveset.gd" id="1_0d65l"]
[ext_resource type="Texture2D" uid="uid://bsm4p8up35xyf" path="res://icon.svg" id="1_pchl4"]
[ext_resource type="LabelSettings" uid="uid://d2m1iuv3747bn" path="res://interface/label_settings/chiq_pro_ingame.tres" id="2_k3icu"]
[ext_resource type="FontFile" uid="uid://dag7s301mbfag" path="res://assets/fonts/ChiqPro.ttf" id="4_eht6r"]

[sub_resource type="LabelSettings" id="LabelSettings_uqiab"]
font = ExtResource("4_eht6r")

[node name="CharacterMoveset" type="MarginContainer"]
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_0d65l")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CharPortrait" type="TextureRect" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = ExtResource("1_pchl4")
stretch_mode = 3

[node name="moveset" type="Label" parent="VBox"]
layout_mode = 2
text = "Moveset:"
label_settings = ExtResource("2_k3icu")

[node name="HBox" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="skill_names" type="Label" parent="VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "()
()
()"
label_settings = SubResource("LabelSettings_uqiab")

[node name="skill_desc" type="Label" parent="VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = " - ?
 - ?
 - ?"
label_settings = SubResource("LabelSettings_uqiab")
